--- a/maui/InterestPointClient/InterestPointClient/LoginPage.xaml
+++ b/maui/InterestPointClient/InterestPointClient/LoginPage.xaml
@@ -3,7 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="InterestPointClient.LoginPage"
              Title="Queue Detecting - Intrest Point">
-    <VerticalStackLayout Margin="20">
+    <VerticalStackLayout Margin="80">
+        <Label
+                Text="Welcome!"
+                SemanticProperties.HeadingLevel="Level1"
+                FontSize="32"
+                HorizontalOptions="Center" />
+
         <Entry x:Name="usernameEntry" Placeholder="Your username"/>
         <Entry x:Name="passwordEntry" Placeholder="Your password" IsPassword="True"/>
         <Button Text="Login"/>
